test/error/parse/ExpectBrace3Open.mod
MODULE ExpectBrace3Open;
VAR s: SET;
BEGIN
  s := 1, 2};
END ExpectBrace3Open.
